# message_queue_practice

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark_runner.hpp  burst.cpp  burst_benchmark.hpp  continuous_benchmark.hpp  equal_rates.cpp  fast_consumer.cpp  fast_producer.cpp  fixture.hpp  mixed_priorities.cpp  random_bursts.cpp  utils.hpp  workers.hpp
docs/: task.md
docs/blocking_bounded_queue/: adr.md
docs/circular_drop_oldest_queue/: adr.md
docs/circular_writer_block/: adr.md
docs/lock_free_queue/: adr.md
docs/priority_queue/: adr.md
include/message_queue/: base_queue.hpp  factory.hpp  stats.hpp  utils.hpp
include/message_queue/policies/: blocking_bounded_queue.hpp  circular_drop_oldest_queue.hpp  circular_writer_block.hpp  lock_free_queue.hpp  priority_queue.hpp
lib/: CMakeLists.txt  base_message.hpp  base_queue.hpp  circular_drop_oldest_queue.hpp  priority_queue.hpp  stats.hpp
lib/blocking_bounded_queue/: queue.hpp
lib/circular_drop_oldest_queue/: queue.hpp
lib/circular_writer_block/: CMakeLists.txt  queue.hpp
lib/lock_free_queue/: queue.hpp
lib/priority_queue/: priority_queue.hpp  queue.hpp
src/: CMakeLists.txt  factory.cpp
src/blocking_bounded_queue/: CMakeLists.txt  queue.cpp
src/circular_drop_oldest_queue/: CMakeLists.txt  queue.cpp
src/circular_writer_block/: CMakeLists.txt  queue.cpp
src/lock_free_queue/: CMakeLists.txt  queue.cpp
src/policies/: blocking_bounded_queue.cpp  circular_drop_oldest_queue.cpp  circular_writer_block.cpp  lock_free_queue.cpp  priority_queue.cpp
src/priority_queue/: CMakeLists.txt  queue.cpp
tests/: CMakeLists.txt  blocking_bounded_queue_ut.cpp  circular_drop_oldest_queue_ut.cpp  circular_writer_block_ut.cpp  lock_free_queue_ut.cpp  priority_queue_ut.cpp
